# ferrite

./: .gitignore  .zshrc  Cargo.toml  LICENSE-mit  README.md
examples/: benchmark.rs  main.rs  test.rs
src/: array.rs  lib.rs  macros.rs  main.rs  tensor.rs
src/autograd/: backward.rs  grad.rs  mod.rs  operations.rs  scalar.rs
src/autograd/grad_fn/: activation.rs  arithmetic.rs  blas.rs  mod.rs  reduction.rs  transform.rs
src/autograd/scalar/: backward.rs  graph.rs  mod.rs  operations.rs
src/autograd/tensor/: backward.rs  base.rs  creation.rs  function.rs  grad.rs  mod.rs  ops.rs  shape.rs
src/autograd_copy/: backward.rs  operations.rs  scalar.rs
src/network/: mod.rs  module.rs  parameter.rs
src/network/data/: loader.rs  mod.rs
src/network/layer/: layer.rs  mod.rs
src/network/loss/: entropy.rs  loss.rs  mean.rs  mod.rs
src/network/module/: linear.rs  mod.rs  module.rs  sequential.rs
src/network/optimizer/: gd.rs  mod.rs  optimizer.rs
src/tensor/: base.rs  creation.rs  mod.rs  ops.rs  shape.rs  util.rs  utils.rs
src/tensor/device/: mod.rs
src/tensor/device/cpu/: mod.rs
src/tensor/device/cpu/kernels/: activation.rs  arithmetic.rs  blas.rs  mod.rs  reduction.rs  transform.rs
src/tensor/device/cpu/storage/: base.rs  mod.rs  utils.rs
src/tensor/ops/: activation.rs  arithmetic.rs  blas.rs  reduction.rs  transform.rs
src/tensor/storage/: base.rs  creation.rs  mod.rs  traits.rs  utils.rs
src/tensor/tensor_storage/: base.rs  creation.rs  mod.rs  ops.rs
src/tensor_storage/: base.rs  creation.rs  mod.rs  ops.rs  shape.rs  utils.rs
