[package]
name = "ferrite-dl"
version = "0.2.0"
edition = "2021"
authors = ["a2alhama@uwaterloo.ca"]
description =  "Deep learning library written in pure Rust"
readme = "README.md"
repository = "https://github.com/ratcht/ferrite"
license = "MIT"
keywords = ["machine-learning", "deep-learning", "neural-networks", "tensor", "autograd"]
categories = ["science", "mathematics", "algorithms"]

[lib]
name = "ferrite"
path = "src/lib.rs"

[dependencies]
ndarray = "0.16.1"
num-traits = "0.2.19"
rand = "0.8"
paste = "1.0"
rayon = "1.10.0"


[dev-dependencies]
criterion = "0.5"
